[gd_scene load_steps=22 format=3 uid="uid://nwddf3iocxkg"]

[ext_resource type="Script" path="res://scripts/ai/RandomAITest.gd" id="1_a0h05"]
[ext_resource type="Texture2D" uid="uid://doq55lghvtbcw" path="res://textures/ocelot.png" id="2_goj0e"]
[ext_resource type="Script" path="res://scripts/creatures/Ocelot.gd" id="2_u1ydl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y0f6m"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_p2j5j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(62, 229, 39, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_r22c0"]
resource_name = "attack"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(76, 278, 32, 17), Rect2(188, 282, 32, 16), Rect2(127, 280, 39, 17), Rect2(76, 278, 32, 17)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-13, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -3), Vector2(-4, -3), Vector2(-9, -3), Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_mua52"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(62, 229, 39, 15), Rect2(117, 232, 32, 15), Rect2(172, 232, 31, 15), Rect2(10, 228, 40, 13), Rect2(9, 277, 44, 14), Rect2(10, 228, 40, 13)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-13, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-4, -1), Vector2(0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpieciesController")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"move_jump_start"
}, {
"args": [],
"method": &"move_jump_end"
}]
}

[sub_resource type="Animation" id="Animation_56y4g"]
resource_name = "sit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(20, 188, 17, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-13, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_olkoa"]
resource_name = "stand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(62, 229, 39, 15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-13, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_73r3w"]
_data = {
"RESET": SubResource("Animation_p2j5j"),
"attack": SubResource("Animation_r22c0"),
"move": SubResource("Animation_mua52"),
"sit": SubResource("Animation_56y4g"),
"stand": SubResource("Animation_olkoa")
}

[sub_resource type="Animation" id="Animation_r7rtt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(8, 7, 8, 4, 10, 4, 10, 3, 18, 3, 18, 5, 19, 5, 19, 12, 10, 12, 10, 11, 9, 11, 9, 10, 8, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(18, 156, 28, 13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body/Head:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dy7us"]
resource_name = "forward"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(8, 9, 9, 9, 9, 4, 12, 4, 18, 4, 18, 7, 19, 7, 19, 12, 10, 12, 10, 11, 9, 11, 9, 10, 8, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(70, 191, 15, 13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body/Head:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 1)]
}

[sub_resource type="Animation" id="Animation_mx50r"]
resource_name = "front"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(8, 7, 8, 4, 10, 4, 10, 3, 18, 3, 18, 5, 19, 5, 19, 12, 10, 12, 10, 11, 9, 11, 9, 10, 8, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(18, 156, 28, 13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Origin/Anchor/Body/Head:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyxlg"]
_data = {
"RESET": SubResource("Animation_r7rtt"),
"forward": SubResource("Animation_dy7us"),
"front": SubResource("Animation_mx50r")
}

[sub_resource type="Animation" id="Animation_kr1pi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(31, 132, 5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ju2hr"]
resource_name = "closed"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(31, 132, 5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_lsr40"]
resource_name = "mad"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(56, 131, 5, 3), Rect2(31, 132, 5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_6cdkn"]
resource_name = "normal"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(21, 131, 5, 3), Rect2(31, 132, 5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_srg4c"]
resource_name = "sad"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(40, 131, 5, 3), Rect2(31, 132, 5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_6w5v4"]
resource_name = "sad_half"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(65, 132, 5, 2), Rect2(31, 132, 5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iabbb"]
_data = {
"RESET": SubResource("Animation_kr1pi"),
"closed": SubResource("Animation_ju2hr"),
"mad": SubResource("Animation_lsr40"),
"normal": SubResource("Animation_6cdkn"),
"sad": SubResource("Animation_srg4c"),
"sad_half": SubResource("Animation_6w5v4")
}

[node name="Ocelot" type="CharacterBody2D" groups=["beast", "ocelot"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_a0h05")

[node name="SpieciesController" type="Node" parent="."]
script = ExtResource("2_u1ydl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_y0f6m")

[node name="Origin" type="Node2D" parent="."]

[node name="Anchor" type="Node2D" parent="Origin"]

[node name="Body" type="Sprite2D" parent="Origin/Anchor"]
position = Vector2(-8, -12)
texture = ExtResource("2_goj0e")
centered = false
region_enabled = true
region_rect = Rect2(62, 229, 39, 15)

[node name="Head" type="Sprite2D" parent="Origin/Anchor/Body"]
position = Vector2(-8, -10)
texture = ExtResource("2_goj0e")
centered = false
region_enabled = true
region_rect = Rect2(18, 156, 28, 13)

[node name="FaceClippingArea" type="Polygon2D" parent="Origin/Anchor/Body/Head"]
clip_children = 1
polygon = PackedVector2Array(8, 7, 8, 4, 10, 4, 10, 3, 18, 3, 18, 5, 19, 5, 19, 12, 10, 12, 10, 11, 9, 11, 9, 10, 8, 10)

[node name="FaceOffset" type="Node2D" parent="Origin/Anchor/Body/Head/FaceClippingArea"]

[node name="Eyes" type="Sprite2D" parent="Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset"]
position = Vector2(11, 4)
texture = ExtResource("2_goj0e")
centered = false
region_enabled = true
region_rect = Rect2(31, 132, 5, 1)

[node name="Mouth" type="Sprite2D" parent="Origin/Anchor/Body/Head/FaceClippingArea/FaceOffset"]
position = Vector2(12, 8)
texture = ExtResource("2_goj0e")
centered = false
region_enabled = true
region_rect = Rect2(22, 139, 3, 2)

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_73r3w")
}

[node name="HeadAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nyxlg")
}

[node name="EyesAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iabbb")
}

[node name="MouthAnimationPlayer" type="AnimationPlayer" parent="."]
